--- a/myos.ui
+++ b/myos.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>815</width>
-    <height>695</height>
+    <width>995</width>
+    <height>675</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
      <rect>
       <x>5</x>
       <y>5</y>
-      <width>400</width>
-      <height>328</height>
+      <width>490</width>
+      <height>319</height>
      </rect>
     </property>
     <property name="font">
@@ -55,8 +55,8 @@
     <widget class="QLabel" name="storage_2">
      <property name="geometry">
       <rect>
-       <x>146</x>
-       <y>0</y>
+       <x>15</x>
+       <y>178</y>
        <width>61</width>
        <height>20</height>
       </rect>
@@ -71,8 +71,8 @@
     <widget class="QLabel" name="storage_3">
      <property name="geometry">
       <rect>
-       <x>146</x>
-       <y>34</y>
+       <x>15</x>
+       <y>212</y>
        <width>61</width>
        <height>20</height>
       </rect>
@@ -87,8 +87,8 @@
     <widget class="QLabel" name="storage_4">
      <property name="geometry">
       <rect>
-       <x>146</x>
-       <y>17</y>
+       <x>15</x>
+       <y>195</y>
        <width>61</width>
        <height>20</height>
       </rect>
@@ -103,8 +103,8 @@
     <widget class="QLabel" name="storage_6">
      <property name="geometry">
       <rect>
-       <x>195</x>
-       <y>0</y>
+       <x>63</x>
+       <y>178</y>
        <width>72</width>
        <height>20</height>
       </rect>
@@ -119,8 +119,8 @@
     <widget class="QLabel" name="storage_7">
      <property name="geometry">
       <rect>
-       <x>195</x>
-       <y>34</y>
+       <x>63</x>
+       <y>212</y>
        <width>72</width>
        <height>20</height>
       </rect>
@@ -135,8 +135,8 @@
     <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>195</x>
-       <y>17</y>
+       <x>63</x>
+       <y>195</y>
        <width>72</width>
        <height>20</height>
       </rect>
@@ -151,45 +151,21 @@
     <widget class="QPushButton" name="clearTrashButton">
      <property name="geometry">
       <rect>
-       <x>376</x>
-       <y>54</y>
-       <width>19</width>
-       <height>19</height>
+       <x>5</x>
+       <y>162</y>
+       <width>130</width>
+       <height>18</height>
       </rect>
      </property>
      <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QProgressBar" name="bar">
-     <property name="geometry">
-      <rect>
-       <x>6</x>
-       <y>55</y>
-       <width>366</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
-     <property name="value">
-      <number>100</number>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignHCenter|Qt::AlignTop</set>
+      <string>Delete Junk Files</string>
      </property>
     </widget>
     <widget class="QLabel" name="images_circle">
      <property name="geometry">
       <rect>
-       <x>134</x>
-       <y>8</y>
+       <x>5</x>
+       <y>186</y>
        <width>6</width>
        <height>6</height>
       </rect>
@@ -201,8 +177,8 @@
     <widget class="QLabel" name="downloads_circle">
      <property name="geometry">
       <rect>
-       <x>134</x>
-       <y>42</y>
+       <x>5</x>
+       <y>220</y>
        <width>6</width>
        <height>6</height>
       </rect>
@@ -214,8 +190,8 @@
     <widget class="QLabel" name="docs_circle">
      <property name="geometry">
       <rect>
-       <x>134</x>
-       <y>25</y>
+       <x>5</x>
+       <y>203</y>
        <width>6</width>
        <height>6</height>
       </rect>
@@ -224,44 +200,12 @@
       <string/>
      </property>
     </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>45</x>
-       <y>34</y>
-       <width>81</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>X GB</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="storageText_7">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>34</y>
-       <width>61</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Free</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-    </widget>
     <widget class="QComboBox" name="otherDisks">
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>18</y>
-       <width>122</width>
+       <y>5</y>
+       <width>130</width>
        <height>18</height>
       </rect>
      </property>
@@ -272,14 +216,14 @@
     <widget class="QLabel" name="storage_9">
      <property name="geometry">
       <rect>
-       <x>275</x>
-       <y>0</y>
-       <width>70</width>
+       <x>2</x>
+       <y>229</y>
+       <width>135</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
-      <string>Performance</string>
+      <string>Performance - 100%</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -288,76 +232,26 @@
     <widget class="QLabel" name="storage_10">
      <property name="geometry">
       <rect>
-       <x>275</x>
-       <y>17</y>
-       <width>70</width>
+       <x>2</x>
+       <y>247</y>
+       <width>135</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
-      <string>Condition</string>
+      <string>Condition - 100%</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="storage_11">
-     <property name="geometry">
-      <rect>
-       <x>334</x>
-       <y>0</y>
-       <width>61</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>100%</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="storage_12">
-     <property name="geometry">
-      <rect>
-       <x>334</x>
-       <y>17</y>
-       <width>61</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>100%</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>5</x>
-       <y>0</y>
-       <width>130</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Choose a disk to check</string>
-     </property>
-    </widget>
     <widget class="QTabWidget" name="tabWidget">
      <property name="geometry">
       <rect>
-       <x>6</x>
-       <y>78</y>
-       <width>389</width>
-       <height>245</height>
+       <x>139</x>
+       <y>5</y>
+       <width>347</width>
+       <height>310</height>
       </rect>
      </property>
      <property name="font">
@@ -386,8 +280,8 @@
         <rect>
          <x>0</x>
          <y>23</y>
-         <width>381</width>
-         <height>195</height>
+         <width>339</width>
+         <height>260</height>
         </rect>
        </property>
        <property name="font">
@@ -456,7 +350,7 @@
         <rect>
          <x>25</x>
          <y>4</y>
-         <width>231</width>
+         <width>210</width>
          <height>18</height>
         </rect>
        </property>
@@ -467,9 +361,9 @@
       <widget class="QLineEdit" name="usernameLineEdit_3">
        <property name="geometry">
         <rect>
-         <x>260</x>
+         <x>239</x>
          <y>4</y>
-         <width>121</width>
+         <width>100</width>
          <height>18</height>
         </rect>
        </property>
@@ -485,8 +379,8 @@
     <widget class="QPushButton" name="addButton">
      <property name="geometry">
       <rect>
-       <x>108</x>
-       <y>80</y>
+       <x>240</x>
+       <y>7</y>
        <width>16</width>
        <height>16</height>
       </rect>
@@ -498,43 +392,97 @@
     <widget class="QLabel" name="storage_13">
      <property name="geometry">
       <rect>
-       <x>275</x>
-       <y>34</y>
-       <width>100</width>
+       <x>2</x>
+       <y>264</y>
+       <width>135</width>
        <height>20</height>
       </rect>
      </property>
      <property name="text">
-      <string>Data Written</string>
+      <string>Data Written - X TB</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="storage_14">
+    <widget class="QFrame" name="circleBar">
      <property name="geometry">
       <rect>
-       <x>334</x>
-       <y>34</y>
-       <width>61</width>
-       <height>20</height>
+       <x>5</x>
+       <y>28</y>
+       <width>130</width>
+       <height>130</height>
       </rect>
      </property>
-     <property name="text">
-      <string>X TB</string>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
      </property>
+     <widget class="QFrame" name="circleBar_2">
+      <property name="geometry">
+       <rect>
+        <x>-26</x>
+        <y>-26</y>
+        <width>182</width>
+        <height>182</height>
+       </rect>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="usedSize">
+      <property name="geometry">
+       <rect>
+        <x>29</x>
+        <y>47</y>
+        <width>70</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>X%</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>14</x>
+        <y>67</y>
+        <width>100</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>X GB</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QFrame" name="specs">
     <property name="geometry">
      <rect>
       <x>5</x>
-      <y>340</y>
-      <width>400</width>
-      <height>328</height>
+      <y>330</y>
+      <width>490</width>
+      <height>319</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -652,8 +600,8 @@
       <rect>
        <x>6</x>
        <y>105</y>
-       <width>388</width>
-       <height>217</height>
+       <width>478</width>
+       <height>208</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -667,8 +615,8 @@
        <rect>
         <x>-7</x>
         <y>-5</y>
-        <width>401</width>
-        <height>227</height>
+        <width>491</width>
+        <height>218</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -701,10 +649,10 @@
    <widget class="QFrame" name="settings">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>340</y>
-      <width>400</width>
-      <height>328</height>
+      <x>500</x>
+      <y>330</y>
+      <width>490</width>
+      <height>319</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -772,7 +720,7 @@
       <rect>
        <x>125</x>
        <y>76</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -833,7 +781,7 @@
       <rect>
        <x>125</x>
        <y>101</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -849,7 +797,7 @@
       <rect>
        <x>125</x>
        <y>126</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -923,8 +871,8 @@
     <widget class="QPushButton" name="clearTrashButton_2">
      <property name="geometry">
       <rect>
-       <x>139</x>
-       <y>300</y>
+       <x>229</x>
+       <y>291</y>
        <width>126</width>
        <height>22</height>
       </rect>
@@ -936,8 +884,8 @@
     <widget class="QPushButton" name="clearTrashButton_3">
      <property name="geometry">
       <rect>
-       <x>269</x>
-       <y>300</y>
+       <x>359</x>
+       <y>291</y>
        <width>126</width>
        <height>22</height>
       </rect>
@@ -1047,7 +995,7 @@
       <rect>
        <x>125</x>
        <y>215</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -1082,7 +1030,7 @@
       <rect>
        <x>125</x>
        <y>190</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -1098,7 +1046,7 @@
       <rect>
        <x>125</x>
        <y>240</y>
-       <width>270</width>
+       <width>360</width>
        <height>20</height>
       </rect>
      </property>
@@ -1110,10 +1058,10 @@
    <widget class="QFrame" name="tasks">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>500</x>
       <y>5</y>
-      <width>400</width>
-      <height>328</height>
+      <width>490</width>
+      <height>319</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -1130,8 +1078,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>400</width>
-       <height>328</height>
+       <width>490</width>
+       <height>319</height>
       </rect>
      </property>
      <property name="horizontalScrollBarPolicy">
@@ -1148,19 +1096,19 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>815</width>
+     <width>995</width>
      <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuStorage">
     <property name="title">
-     <string>Storage</string>
+     <string>Disks</string>
     </property>
     <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuSpecs">
     <property name="title">
-     <string>Specs</string>
+     <string>Usage</string>
     </property>
    </widget>
    <widget class="QMenu" name="menuSettings">
@@ -1170,7 +1118,7 @@
    </widget>
    <widget class="QMenu" name="menuTask_Manager">
     <property name="title">
-     <string>Task Manager</string>
+     <string>Tasks</string>
     </property>
    </widget>
    <addaction name="menuStorage"/>
