--- a/myos.ui
+++ b/myos.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1075</width>
-    <height>800</height>
+    <width>1250</width>
+    <height>840</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
      <rect>
       <x>5</x>
       <y>5</y>
-      <width>530</width>
-      <height>363</height>
+      <width>590</width>
+      <height>382</height>
      </rect>
     </property>
     <property name="font">
@@ -95,7 +95,7 @@
      <property name="geometry">
       <rect>
        <x>3</x>
-       <y>307</y>
+       <y>304</y>
        <width>155</width>
        <height>20</height>
       </rect>
@@ -111,7 +111,7 @@
      <property name="geometry">
       <rect>
        <x>3</x>
-       <y>324</y>
+       <y>320</y>
        <width>155</width>
        <height>20</height>
       </rect>
@@ -128,8 +128,8 @@
       <rect>
        <x>160</x>
        <y>6</y>
-       <width>365</width>
-       <height>352</height>
+       <width>425</width>
+       <height>370</height>
       </rect>
      </property>
      <property name="font">
@@ -171,7 +171,7 @@
         <rect>
          <x>27</x>
          <y>5</y>
-         <width>210</width>
+         <width>250</width>
          <height>18</height>
         </rect>
        </property>
@@ -182,9 +182,9 @@
       <widget class="QLineEdit" name="usernameLineEdit_3">
        <property name="geometry">
         <rect>
-         <x>242</x>
+         <x>282</x>
          <y>5</y>
-         <width>114</width>
+         <width>134</width>
          <height>18</height>
         </rect>
        </property>
@@ -200,8 +200,8 @@
         <rect>
          <x>1</x>
          <y>25</y>
-         <width>355</width>
-         <height>300</height>
+         <width>415</width>
+         <height>320</height>
         </rect>
        </property>
        <property name="font">
@@ -289,7 +289,7 @@
      <property name="geometry">
       <rect>
        <x>3</x>
-       <y>341</y>
+       <y>336</y>
        <width>155</width>
        <height>20</height>
       </rect>
@@ -375,7 +375,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>226</y>
+       <y>225</y>
        <width>151</width>
        <height>20</height>
       </rect>
@@ -388,7 +388,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>248</y>
+       <y>247</y>
        <width>151</width>
        <height>20</height>
       </rect>
@@ -401,7 +401,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>270</y>
+       <y>269</y>
        <width>151</width>
        <height>20</height>
       </rect>
@@ -414,7 +414,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>202</y>
+       <y>201</y>
        <width>155</width>
        <height>20</height>
       </rect>
@@ -435,7 +435,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>289</y>
+       <y>287</y>
        <width>155</width>
        <height>20</height>
       </rect>
@@ -452,14 +452,45 @@
       <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
      </property>
     </widget>
+    <widget class="QComboBox" name="otherDisks_2">
+     <property name="geometry">
+      <rect>
+       <x>435</x>
+       <y>6</y>
+       <width>149</width>
+       <height>18</height>
+      </rect>
+     </property>
+     <property name="acceptDrops">
+      <bool>false</bool>
+     </property>
+     <item>
+      <property name="text">
+       <string>Sort by</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QPushButton" name="clearTrashButton_5">
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>356</y>
+       <width>151</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Defrag Disk</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="specs">
     <property name="geometry">
      <rect>
       <x>5</x>
-      <y>375</y>
-      <width>530</width>
-      <height>363</height>
+      <y>400</y>
+      <width>590</width>
+      <height>382</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -476,7 +507,7 @@
       <rect>
        <x>5</x>
        <y>0</y>
-       <width>446</width>
+       <width>550</width>
        <height>20</height>
       </rect>
      </property>
@@ -507,7 +538,7 @@
       <rect>
        <x>30</x>
        <y>45</y>
-       <width>400</width>
+       <width>550</width>
        <height>16</height>
       </rect>
      </property>
@@ -520,7 +551,7 @@
       <rect>
        <x>30</x>
        <y>23</y>
-       <width>400</width>
+       <width>550</width>
        <height>16</height>
       </rect>
      </property>
@@ -551,7 +582,7 @@
       <rect>
        <x>30</x>
        <y>67</y>
-       <width>400</width>
+       <width>550</width>
        <height>16</height>
       </rect>
      </property>
@@ -577,8 +608,8 @@
       <rect>
        <x>6</x>
        <y>105</y>
-       <width>518</width>
-       <height>251</height>
+       <width>578</width>
+       <height>271</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -592,8 +623,8 @@
        <rect>
         <x>-5</x>
         <y>-6</y>
-        <width>529</width>
-        <height>262</height>
+        <width>589</width>
+        <height>282</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -609,7 +640,7 @@
       <rect>
        <x>6</x>
        <y>85</y>
-       <width>446</width>
+       <width>550</width>
        <height>20</height>
       </rect>
      </property>
@@ -626,10 +657,10 @@
    <widget class="QFrame" name="settings">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>375</y>
-      <width>530</width>
-      <height>363</height>
+      <x>640</x>
+      <y>400</y>
+      <width>590</width>
+      <height>382</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -667,7 +698,7 @@
       <rect>
        <x>6</x>
        <y>62</y>
-       <width>140</width>
+       <width>160</width>
        <height>20</height>
       </rect>
      </property>
@@ -695,9 +726,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>151</x>
+       <x>171</x>
        <y>62</y>
-       <width>373</width>
+       <width>414</width>
        <height>20</height>
       </rect>
      </property>
@@ -713,7 +744,7 @@
       <rect>
        <x>6</x>
        <y>87</y>
-       <width>140</width>
+       <width>160</width>
        <height>20</height>
       </rect>
      </property>
@@ -730,9 +761,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>151</x>
+       <x>171</x>
        <y>87</y>
-       <width>373</width>
+       <width>414</width>
        <height>20</height>
       </rect>
      </property>
@@ -746,9 +777,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>151</x>
+       <x>171</x>
        <y>112</y>
-       <width>373</width>
+       <width>414</width>
        <height>20</height>
       </rect>
      </property>
@@ -764,7 +795,7 @@
       <rect>
        <x>6</x>
        <y>112</y>
-       <width>140</width>
+       <width>160</width>
        <height>20</height>
       </rect>
      </property>
@@ -822,40 +853,14 @@
     <widget class="QPushButton" name="clearTrashButton_2">
      <property name="geometry">
       <rect>
-       <x>268</x>
-       <y>335</y>
+       <x>5</x>
+       <y>354</y>
        <width>126</width>
        <height>22</height>
       </rect>
      </property>
      <property name="text">
       <string>Reset Settings</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="clearTrashButton_3">
-     <property name="geometry">
-      <rect>
-       <x>398</x>
-       <y>335</y>
-       <width>126</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Apply Changes</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_5">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>300</y>
-       <width>80</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>defrag disk</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_7">
@@ -909,10 +914,10 @@
    <widget class="QFrame" name="tasks">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>640</x>
       <y>5</y>
-      <width>530</width>
-      <height>363</height>
+      <width>590</width>
+      <height>382</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -929,9 +934,15 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>530</width>
-       <height>363</height>
+       <width>590</width>
+       <height>382</height>
       </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>530</width>
+       <height>0</height>
+      </size>
      </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -939,13 +950,44 @@
      <property name="selectionMode">
       <enum>QAbstractItemView::NoSelection</enum>
      </property>
+     <property name="columnCount">
+      <number>5</number>
+     </property>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Program's Name</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>RAM</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>CPU</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>GPU</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>HDD</string>
+      </property>
+     </column>
     </widget>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>740</y>
+      <x>150</x>
+      <y>780</y>
       <width>84</width>
       <height>20</height>
      </rect>
@@ -960,8 +1002,8 @@
    <widget class="QLabel" name="storage_7">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>757</y>
+      <x>150</x>
+      <y>797</y>
       <width>84</width>
       <height>20</height>
      </rect>
@@ -976,8 +1018,8 @@
    <widget class="QLabel" name="storage_3">
     <property name="geometry">
      <rect>
-      <x>124</x>
-      <y>757</y>
+      <x>104</x>
+      <y>797</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -992,8 +1034,8 @@
    <widget class="QLabel" name="storage_4">
     <property name="geometry">
      <rect>
-      <x>124</x>
-      <y>740</y>
+      <x>104</x>
+      <y>780</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -1008,8 +1050,8 @@
    <widget class="QLabel" name="storage_6">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>750</y>
+      <x>340</x>
+      <y>790</y>
       <width>84</width>
       <height>20</height>
      </rect>
@@ -1024,8 +1066,8 @@
    <widget class="QLabel" name="storage_2">
     <property name="geometry">
      <rect>
-      <x>314</x>
-      <y>750</y>
+      <x>294</x>
+      <y>790</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -1043,7 +1085,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1075</width>
+     <width>1250</width>
      <height>21</height>
     </rect>
    </property>
